# Le_ViP

./: .gitignore  CMakeLists.txt  README.md  bulding_feedback.txt
docs/: CMakeLists.txt  mainpage.md
include/image_processing/: alpha_blend.hpp  utility.hpp
include/image_processing/frame/: buffer.hpp  image_correction.hpp  line_detection.hpp  median_estimation.hpp  overlay.hpp  refining.hpp  roi.hpp  vectorisation.hpp
include/image_processing/utility/: buffer.hpp  constante.hpp  device.hpp  video_proc.hpp
include/user_interface/cli/: keyboard_handling.hpp
include/user_interface/interface/: trackbar.hpp
scripts/: installOCV.sh  setup_project.bat  setup_project_linux.sh  setup_project_win.bat  test.bat
scripts/app_installation/: setup_project_linux.sh  setup_project_win.bat
src/: CMakeLists.txt
src/image_processing/: alpha_blending.cpp  segment_object.cpp  utility.cpp
src/image_processing/frame/: buffer.cpp  image_correction.cpp  line_detection.cpp  median_estimation.cpp  overlay.cpp  refining.cpp  roi.cpp  vectorisation.cpp
src/image_processing/utility/: buffer.cpp  device.cpp  video_proc.cpp  video_stream.cpp
src/user_interface/backend/: EventHandling.cpp
src/user_interface/cli/: keyboard_handling.cpp
src/user_interface/interface/: trackbar.cpp
template/: parser.cpp
tests/: CMakeLists.txt  prototype.cpp  prototype_draft.cpp
tests/tuto/: CMakeLists.txt  DisplayImage.cpp  UMat_memory_mangement.cpp  alpha_blending.cpp  canny_edge.cpp  deepsort.cpp  dnn_object_detection.cpp  dnn_segmentation.cpp  face_detect.cpp  find_contour.cpp  foreground_masking.cpp  grabcut.cpp  houg_lines.cpp  hough_transform.cpp  improve_image.py  laplacian.cpp  live_video_processing.cpp  live_video_processing_yt.cpp  lumen_correction.cpp  median_estimation.cpp  optical_flow.cpp  segment_object.cpp  segment_object.hpp  segment_object_test.cpp  trackbar.cpp  tracker.cpp  tuto_opencv.cpp  video_proc_U.cpp  video_processing.cpp  video_write.cpp  video_write_basic.cpp  watershed.cpp
